--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,9 +11,29 @@
       padding-bottom: 40px;
       color: #5a5a5a;
     }
+
+
+    .title-section{
+      color: white;
+      width: 600px;
+      height: 65px;
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      margin: 80px auto 70px auto;
+    }
+
+    .title-section h2{
+      font-size: 23px;
+      margin: 0;
+      padding: 0;
+      line-height: 35px;
+    }
+
     .message{
       width: 50%;
-      position: absolute;
       left: 0;
       right: 0;
       margin-left: auto;
@@ -55,7 +75,6 @@
     }
 
     .carousel {
-      margin-bottom: 60px;
       background: url(../img/bg_home.jpg);
       background-size: auto 100%;
     }
@@ -114,26 +133,24 @@
       margin-top: 10px;
       background: #6abc9c;
     }
-    .marketing .span4 {
+    .marketing .span3 {
       text-align: center;
     }
     .marketing h2 {
       font-weight: normal;
     }
-    .marketing .span4 p {
+    .marketing .span3 p {
       margin-left: 10px;
       margin-right: 10px;
     }
     .featurette-divider {
-      margin: 80px 0;
+      margin: 25px 0;
     }
     .featurette {
-      padding-top: 120px; 
+      padding-top: 10px; 
       overflow: hidden; 
     }
-    .featurette-image {
-      margin-top: -120px; 
-    }
+
 
     .featurette-image.pull-left {
       margin-right: 40px;
@@ -143,13 +160,131 @@
     }
 
     .featurette-heading {
-      font-size: 50px;
       font-weight: 300;
       line-height: 1;
       letter-spacing: -1px;
     }
 
+    .lead {
+      margin-top: 40px;
+      margin-bottom: 20px;
+      font-size: 16px;
+      font-weight: 200;
+      line-height: 21px;
+    }
 
+    
+    #logos_tecnologias ul{
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      left: 0;
+      right: 0;
+      margin-right: auto;
+      margin-left: auto;
+      width: 932px;
+    }
+    #logos_tecnologias ul li{
+      margin: 0;
+      padding: 0;
+      width: 230px;
+      height: 210px;
+      float: left;
+      cursor: pointer;
+
+    }
+
+    #logos_tecnologias #first-row li:nth-child(even){
+      background: #f5f5f3;
+    }
+    
+    #logos_tecnologias #first-row li:nth-child(odd){
+      background: #efeeec;
+    }
+
+    #logos_tecnologias #second-row li:nth-child(even){
+      background: #efeeec;
+    }
+    #logos_tecnologias #second-row li:nth-child(odd){
+      background: #f5f5f3;
+    }
+    #logos_tecnologias #second-row li:nth-child(even):hover{
+      background: #f5f5f3;
+    }
+    #logos_tecnologias #second-row li:nth-child(odd):hover{
+      background: #efeeec;
+    }
+    #logos_tecnologias #first-row li:nth-child(even):hover{
+      background: #efeeec;
+    }
+    #logos_tecnologias #first-row li:nth-child(odd):hover{
+      background: #f5f5f3;
+    }
+    #title-section_1{
+      background: #6abc9c;
+      box-shadow: 0px 8px 1px #f0f8f5;
+    }
+    #title-section_2{
+      background: red;
+      box-shadow: 0px 8px 1px #faedeb;
+    }
+    #title-section_3{
+      background: #b19a68;
+      box-shadow: 0px 8px 1px #f7f5f0;
+    }
+    #title-section_4{
+      background: #e7aa32;
+      box-shadow: 0px 8px 1px #fdf6ea;
+    }
+
+
+    #logos_tecnologias #first-row #logo_1{
+      background-image: url(../img/html5.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    #logos_tecnologias #first-row #logo_2{
+      background-image: url(../img/android.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    #logos_tecnologias #first-row #logo_3{
+      background-image: url(../img/ios.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    #logos_tecnologias #first-row #logo_4{
+      background-image: url(../img/phonegap.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    #logos_tecnologias #second-row #logo_5{
+      background-image: url(../img/django.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    #logos_tecnologias #second-row #logo_6{
+      background-image: url(../img/nodejs.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    #logos_tecnologias #second-row #logo_7{
+      background-image: url(../img/java.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    #logos_tecnologias #second-row #logo_8{
+      background-image: url(../img/magento.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
 
     /* RESPONSIVE CSS
     -------------------------------------------------- */
@@ -220,7 +355,7 @@
         font-size: 18px;
       }
 
-      .marketing .span4 + .span4 {
+      .marketing .span3 + .span3 {
         margin-top: 40px;
       }
 
@@ -232,4 +367,4 @@
         line-height: 1.5;
       }
 
-    }ç
+    }
